create chatbots and explore cognitive services

--- a/10b-clu-client-(preview)/Python/clock-client/.env
+++ b/10b-clu-client-(preview)/Python/clock-client/.env
@@ -1,2 +1,2 @@
-LS_CONVERSATIONS_ENDPOINT = "enter your language service endpoint"
-LS_CONVERSATIONS_KEY = "enter your language service primary key"
+LS_CONVERSATIONS_ENDPOINT=https://lab-ai-10b.cognitiveservices.azure.com/
+LS_CONVERSATIONS_KEY=23c6a545cb0b4e66abb23dd297668771
