--- a/01-getting-started/Python/rest-client/.env
+++ b/01-getting-started/Python/rest-client/.env
@@ -1,2 +1,2 @@
-COG_SERVICE_ENDPOINT=your_cognitive_services_endpoint
-COG_SERVICE_KEY=your_cognitive_services_key
+COG_SERVICE_ENDPOINT=https://multiai.cognitiveservices.azure.com/
+COG_SERVICE_KEY=a5a54c70a34c4f8f9eab6ad9623fd1bd
